<resources>
    <string name="app_name">Sound Meter</string>
    <string name="sound_meter">SOUND METER</string>
    <string name="setting">Setting</string>
    <string name="info">Info</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="text_1_info">Normal breathing, Mosquito</string>
    <string name="text_2_info">Whisper, Stream</string>
    <string name="text_3_info">Refrigerator</string>
    <string name="text_4_info">Conversation, Quite office</string>
    <string name="text_5_info">Car, City traffic</string>
    <string name="text_6_info">Truck, City traffic noise</string>
    <string name="text_7_info">Hairdryer, Lawnmower</string>
    <string name="text_8_info">Helicopter, Train</string>
    <string name="text_9_info">Trombone</string>
    <string name="text_10_info">Police siren, Boom box</string>
    <string name="text_11_info">Jet takeoff, Shotgun firing</string>
    <string name="text_12_info">Fireworks</string>
    <string name="text_13_info">Hearing protection</string>
    <string name="text_14_info">The information below shows dB levels that may affect your hearing:</string>
    <string name="text_15_info">Comfortable</string>
    <string name="text_16_info">Feeling uncomfortable but bearable</string>
    <string name="text_17_info">Irritability and fatigue</string>
    <string name="text_18_info">Very uncomfortable</string>
    <string name="text_19_info">Exposure longer than 1 hour will affect hearing and nerves</string>
    <string name="text_20_info">Hearing and nerve damage</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="indonesia">Indonesia</string>
    <string name="portuguese">Portuguese</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="quit">Do you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_language_before_change">choose language before change\n</string>

</resources>