<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:contentDescription="Back"
        android:padding="12dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_3_semi_bold_600"
        android:text="@string/language"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:includeFontPadding="false"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toStartOf="@+id/iv_confirm"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <ImageView
        android:id="@+id/iv_confirm"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="Confirm"
        android:padding="12dp"
        android:src="@drawable/ic_check_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_eng"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_eng"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_eng"
            app:layout_constraintTop_toTopOf="@id/iv_eng"
            app:layout_constraintBottom_toBottomOf="@id/iv_eng"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_eng"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_hindi"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_hindi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_hi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_hindi"
            app:layout_constraintTop_toTopOf="@id/iv_hindi"
            app:layout_constraintBottom_toBottomOf="@id/iv_hindi"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_hindi"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_spanish"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_spanish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_es"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_spanish"
            app:layout_constraintTop_toTopOf="@id/iv_spanish"
            app:layout_constraintBottom_toBottomOf="@id/iv_spanish"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_french"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_spanish"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_french"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_french"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_fr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_french"
            app:layout_constraintTop_toTopOf="@id/iv_french"
            app:layout_constraintBottom_toBottomOf="@id/iv_french"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_german"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_french"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_german"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_german"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_de"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/german"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_german"
            app:layout_constraintTop_toTopOf="@id/iv_german"
            app:layout_constraintBottom_toBottomOf="@id/iv_german"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_indo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_german"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_indo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_indo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/indonesia"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_indo"
            app:layout_constraintTop_toTopOf="@id/iv_indo"
            app:layout_constraintBottom_toBottomOf="@id/iv_indo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_portu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_languages"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_indo"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_portu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="11dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_portu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/portuguese"
            android:fontFamily="@font/be_vietnam_pro_regular_400"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iv_portu"
            app:layout_constraintTop_toTopOf="@id/iv_portu"
            app:layout_constraintBottom_toBottomOf="@id/iv_portu"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>