<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:background="?android:attr/actionBarItemBackground"
        android:id="@+id/iv_arrow_left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:contentDescription="back"
        android:padding="12dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/source_sans_3_bold_700"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_left"
        app:layout_constraintEnd_toStartOf="@id/gone"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_left"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_left" />

    <ImageView
        android:id="@+id/gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:focusable="false"
        android:padding="12dp"
        android:src="@drawable/arrow_left"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/bg_setting"
        android:backgroundTint="#002E31"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_setting">


        <ImageView
            android:id="@+id/iv_translate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_translate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"

            android:fontFamily="@font/inter_medium_500"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_translate"
            app:layout_constraintStart_toEndOf="@id/iv_translate"
            app:layout_constraintTop_toTopOf="@id/iv_translate" />

        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_change_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-8dp"
            android:fontFamily="@font/inter_medium_500"
            android:text="@string/english"
            android:textColor="#00FFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_arrow_right"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="@id/constraint_language"
        app:layout_constraintStart_toStartOf="@+id/constraint_language"
        app:layout_constraintTop_toBottomOf="@id/constraint_language"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/bg_setting"
        android:backgroundTint="#002E31"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="?android:attr/selectableItemBackground"
            android:paddingHorizontal="8dp"
            android:id="@+id/layout_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_share"
                app:layout_constraintStart_toEndOf="@id/iv_share"
                app:layout_constraintTop_toTopOf="@id/iv_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="8dp"
            android:id="@id/layout_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"

            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_share">

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_rate"
                app:layout_constraintStart_toEndOf="@id/iv_rate"
                app:layout_constraintTop_toTopOf="@id/iv_rate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="8dp"
            android:id="@+id/layout_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"

            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_rate">

            <ImageView
                android:id="@+id/iv_about"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_about"
                app:layout_constraintStart_toEndOf="@id/iv_about"
                app:layout_constraintTop_toTopOf="@id/iv_about" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="8dp"
            android:id="@+id/layout_priprivacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_about">

            <ImageView
                android:id="@+id/iv_privacy_policy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_privacy_policy"
                app:layout_constraintStart_toEndOf="@id/iv_privacy_policy"
                app:layout_constraintTop_toTopOf="@id/iv_privacy_policy" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="8dp"
            android:id="@+id/sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_priprivacy_policy">

            <ImageView
                android:id="@+id/iv_sound"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_sound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="Sound"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_sound"
                app:layout_constraintStart_toEndOf="@id/iv_sound"
                app:layout_constraintTop_toTopOf="@id/iv_sound" />
            
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_sound"
                app:layout_constraintBottom_toBottomOf="@id/iv_sound"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="8dp"
            android:id="@+id/vibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sound">

            <ImageView
                android:id="@+id/iv_vibration"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_vibration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_vibration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium_500"
                android:lines="1"
                android:maxLines="1"
                android:text="vibration"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_vibration"
                app:layout_constraintStart_toEndOf="@id/iv_vibration"
                app:layout_constraintTop_toTopOf="@id/iv_vibration" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/vibration_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_vibration"
                app:layout_constraintBottom_toBottomOf="@id/iv_vibration"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>